@@ -91,6 +91,10 @@ proc run_lang_tests {lang} {
     gdb_test "print cstring" " = \"const string\""
 
     gdb_test "print estring" "\"embedded x\\\\201\\\\202\\\\203\\\\204\""
+
+    gdb_test_no_output "python pp_ls_encoding = 'UTF-8'"
+    gdb_test "print estring2" "\"embedded \", <incomplete sequence \\\\302>"
+
     gdb_test "print c" " = container \"container\" with 2 elements = {$nl *.0. = 23,$nl *.1. = 72$nl}"
 
     gdb_test "print nstype" " = {$nl *.0. = 7,$nl *.1. = 42$nl}"
