@@ -1489,7 +1489,7 @@ val_print_string (struct type *elttype, const char *encoding,
 	  fputs_filtered (" ", stream);
 	}
       LA_PRINT_STRING (stream, elttype, buffer, bytes_read / width,
-		       NULL, force_ellipsis, options);
+		       encoding, force_ellipsis, options);
     }
 
   if (errcode != 0)
