@@ -1,3 +1,8 @@
+2010-10-18  Tom Tromey  <tromey@redhat.com>
+
+	* valprint.c (val_print_string): Pass 'encoding' to
+	LA_PRINT_STRING.
+
 2010-10-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	Fix the `stopped language detection' testcase for gcc-4.5.
